fix the occational wrapping around of touching float items

--- a/position.css
+++ b/position.css
@@ -4,7 +4,7 @@
 
 body {
     margin: 0;
-    white-space: nowrap;
+    overflow: hidden;
 }
 
 .red {
